tile description overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -670,7 +670,11 @@
   font-size: 12px;
   line-height: 14px;
   margin: 20px 0px 5px 0px;
-  height: 45px;
+  height: 28px;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
 }
 
 .mp-update-tile-container {
